# CPP-with-cmake-example

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: mathClass.hpp
include/foo/: foo.hpp
src/: CMakeLists.txt  foo.cpp
tests/: CMakeLists.txt  foo_test.cpp  math_test.cpp
